--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+*{
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
+  height: 100vh;
+  background-image: url("./images/background.jpg");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
 }
 
 .App-logo {
